--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+body
+{
+    background-image: url("./assets/pictures/redcloud.jpg");
+    background-size: 1300px 700px;
+    background-repeat: no-repeat;
+}
+
 .jumbotron
 {
-    background-image: url("./assets/pictures/sun-pattern.png");
+    background-image: url("./assets/pictures/weather.png");
     width: auto;
     height: 200px;
 }
@@ -25,6 +32,7 @@
 {
     border: solid;
     height: 45px;
+    color: white;
 }
 #info
 {
@@ -33,4 +41,17 @@
 .row
 {
     display: inline;
+}
+.card-group
+{
+    height: 100px;
+    width: 500px;
+}
+.card-body
+{
+    background-color: lightblue;
+}
+.searchHistory
+{
+    color: white;
 }
